--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="index.html">Home</a>
         <a href="https://canaltech.com.br/" target="_blank">Notícias</a>
         <a href="https://www.techtudo.com.br/" target="_blank">Curiosidades</a>
-        <a href="faleconosco.html">Fale Conosco</a>
+        <a href="faleconosco.html">Contato</a>
     </nav>
     <main>
         <article>
